--- a/app/src/main/res/layout/activity_list_service.xml
+++ b/app/src/main/res/layout/activity_list_service.xml
@@ -8,6 +8,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="sitthichai.nudech.map.manheimcar.ListService">
+    tools:context="sitthichai.nudech.map.manheimcar.ListService"
+    android:background="@drawable/wallpapers_a_03">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/livOfficer"
+        android:background="#af4e4f4d" />
 </RelativeLayout>
