--- a/app/src/main/res/layout/activity_list_service.xml
+++ b/app/src/main/res/layout/activity_list_service.xml
@@ -15,5 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/livOfficer"
-        android:background="#af4e4f4d" />
+        android:background="#af4e4f4d"
+        android:descendantFocusability="blocksDescendants" />
 </RelativeLayout>
